# freeswitch

./: Freeswitch.2017.sln  UpgradeLog2.htm
libs/win32/ldns/ldns-lib/: ldns-lib.2017.vcxproj
src/include/private/: switch_core_pvt.h
src/mod/applications/mod_authentication/: auth_https.c  auth_https.h  mod_auth.c  mod_authentication.2017.vcxproj
src/mod/applications/mod_authentication/autoload_configs/: auth.conf.xml
src/mod/applications/mod_av/: avcodec.c
src/mod/databases/mod_mariadb/: mod_mariadb.c
src/polycom/https/: Makefile.am  auth_https.c  auth_https.h  lib_https.cpp  lib_https.h  lib_types.h  polycom_https.vcxproj  polycom_https.vcxproj.filters
src/polycom/https/MACManager/: HelperUtil.cpp  HelperUtil.h  HmacUtil.cpp  HmacUtil.h  IMACManager.h  MACManager.cpp  MACManager.h  MacEngine.cpp  MacEngine.h  SHA1.cpp  SHA1.h  base64.cpp  base64.h  stdafx.cpp
